2019-10-14  Wilco Dijkstra  <wdijkstr@arm.com>

	* config/arm/arm.c (arm_legitimize_address): Remove Thumb-2 bailout.

2019-10-14  Wilco Dijkstra  <wdijkstr@arm.com>

	* config/arm/arm.c (arm_option_override): Don't override sched
	pressure algorithm.

2019-10-14  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/92069
	* tree-vect-loop.c (vect_analyze_scalar_cycles_1): For nested
	cycles do not set vect_nested_cycle on the latch definition.

2019-10-14  Richard Sandiford  <richard.sandiford@arm.com>

	* function-abi.h (expr_callee_abi): Declare.
	* function-abi.cc (expr_callee_abi): New function.

2019-10-14  Aldy Hernandez  <aldyh@redhat.com>

	* tree-vrp.c (value_range_base::set): Normalize unsigned ~[0,0]
	into [1,MAX].
	* tree-vrp.h (value_range_base::nonzero_p): Adjust for unsigned
	non-zero being represented as [1,MAX].

2019-10-14  Xiong Hu Luo  <luoxhu@linux.ibm.com>

	* tree-sra.c (dump_access): Add missing braces.

2019-10-13  Iain Sandoe  <iain@sandoe.co.uk>

	* config/darwin.c (machopic_indirection_name): Rework the
	function to emit linker-visible symbols only for indirections
	in the data section.  Clean up the code and update comments.

2019-10-13  Iain Sandoe  <iain@sandoe.co.uk>

	* config/darwin.c (machopic_indirect_data_reference): Remove
	redundant code.

2019-10-13  Nathan Sidwell  <nathan@acm.org>

	* gengtype-lex.l (CXX_KEYWORD): Add 'mutable'.

2019-10-13  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* doc/sourcebuild.texi (Test Directives, Add Options): Remove
	c99_runtime.

2019-10-12  Jan Hubicka  <hubicka@ucw.cz>

	* lto-streamer-out.c (collect_block_tree_leafs): Renumber statements
	so non-virutal are before virutals.
	(output_function): Avoid body modifications.

2019-10-12  John David Anglin  <danglin@gcc.gnu.org>

	* config/pa/pa.c (pa_output_call): Load descriptor address to register
	%r22.  Load function address before global pointer.
	(pa_attr_length_indirect_call): Adjust length of inline versions of
	$$dyncall.